--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site uses data from mapbox.com and darksky.net</p>
         <img alt="pic" class="portrait" src="/img/robot.png" />
     </div>
     {{>footer}}
